--- a/src/desktop/index.html
+++ b/src/desktop/index.html
@@ -556,7 +556,7 @@
         </div>
         <div class="popap" id="pop2">
             <div class="close"></div>
-            <h2>ЗАКАЗАТЬ ЗВОНОК</h2>
+            <h2>СПАСИБО ЗА ЗАЯВКУ!</h2>
             <p>Наш менеджер перезвонит Вам в
                 <br> ближайшие 20 минут.</p>
             <div class="timer">
