--- a/src/desktop/index.html
+++ b/src/desktop/index.html
@@ -53,9 +53,9 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <audio id="aud1" loop preload="auto">
+                    <!--audio id="aud1" loop preload="auto" autoplay>
                         <source src="audio/audio1.mp3">
-                    </audio>
+                    </audio-->
                 </div>
                 <div class="sounds" id="audio2">
                     <h3>Звучание с акустическими проводами Fourth Component</h3>
@@ -70,9 +70,9 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <audio id="aud2" loop preload="auto">
+                    <!--audio id="aud2" loop preload="auto" autoplay>
                         <source src="audio/audio2.mp3">
-                    </audio>
+                    </audio-->
                 </div>
             </div>
             <div class="gr_sound">
